DropCapabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: drop-capabilities
  annotations:
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/description: >-
      Capabilities permit privileged actions without giving full root access. All 
      capabilities or NET_RAW should be dropped from a pod, with only those required added back.
spec:
  validationFailureAction: audit
  rules:
  - name: check-containers
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "All capabilities or NET_RAW should be dropped with only those required added back."
      pattern:
        spec:
          containers:
          - securityContext:
              capabilities:
                drop: ["ALL | NET_RAW"]
#  - name: check-init-containers
#    match:
#      resources:
#        kinds:
#        - Pod
#    validate:
#      message: "All capabilities or NET_RAW should be dropped with only those required added back."
#      pattern:
#      - spec:
#          =(initContainers):
#          - securityContext:
#              capabilities:
#                drop: ["ALL | NET_RAW"]
