RunAsNonRoot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
  annotations:
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/description: Containers must be required to run as non-root users.
spec:
  background: true
  validationFailureAction: audit
  rules:
  - name: check-containers
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: >-
        Running as root is not allowed. The fields spec.securityContext.runAsUser,
        spec.containers[*].securityContext.runAsUser, and
        spec.initContainers[*].securityContext.runAsUser must be greater than 0.
      anyPattern:
      - spec:
          securityContext:
            runAsUser: ">0"
          containers:
          - =(securityContext):
              =(runAsUser): ">0"
          =(initContainers):
          - =(securityContext):
              =(runAsUser): ">0"              
      - spec:
          containers:
          - securityContext:
              runAsUser: ">0"
          =(initContainers):
          - securityContext:
              rrunAsUser: ">0"
